Update ccList by removing an email address
Removed an email from the ccList in the script.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@ function validateFlat() {
     "enquiries@incorlakecity.com," +
     "sanjay.padamatwar@incorlakecity.com,abdulla.hussain@incorlakecity.com,deepika.sripathi@incorlakecity.com," +
     "swathi.kowlampet@incorlakecity.com,satyanarayana.potukuchi@incorlakecity.com,srikanth.basineni@incorlakecity.com," +
-    "surya@incor.in,info@incor.in,ramesh.vantaram@incor.in,ananth.kalle@incor.in,prudhvi.chinta@incor.in," +
-    "ilcsupport@incorlakecity.com";
+    "surya@incor.in,info@incor.in,ramesh.vantaram@incor.in,ananth.kalle@incor.in,prudhvi.chinta@incor.in";
 
     let subject =
         "Request to share progress & expected possession date – Flat " + flat +
