Integrate Google Analytics and update contact numbers
Added Google Analytics tracking script and updated phone numbers.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EDBWDS7G1J"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EDBWDS7G1J');
+    </script>
+
     <title>Send Email to Incor Team</title>
     <style>
         /* Modern CSS Reset & Variables */
@@ -280,15 +291,6 @@
         }
 
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/"
-  }
-}
-</script>
 </head>
 <body>
 
@@ -409,8 +411,8 @@ const CC_LIST = [
 const WA_CONTACTS = [
   { label: "Shyam, CRM Manager", name: "Shyam", phone: "919121311648" },
   { label: "Srikanth Basineni, CRM Head", name: "Srikanth", phone: "917674996742" },
-  { label: "Swati, CRM Team", name: "Swati", phone: "9121315034" },
-  { label: "Hussain, CRM Team", name: "Hussain", phone: "8885722631" },
+  { label: "Swati, CRM Team", name: "Swati", phone: "919121315034" },
+  { label: "Hussain, CRM Team", name: "Hussain", phone: "918885722631" },
 ];
 
 const FEEDBACK_PHONE = "918977496236";
